--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -66,6 +66,12 @@
     font-size: 15px;
 }
 
+@media only screen and (max-width: 1000px) {
+    .ProfileName {
+        display: none;
+    }
+}
+
 @media only screen and (max-width: 900px) {
     .Title {
         float: left;
@@ -86,7 +92,7 @@
     }
 }
 
-@media only screen and (max-width: 740px) {
+@media only screen and (max-width: 653px) {
     .NavLink {
         display: none;
     }
